Clase05/09-despliegue-local/backend1-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend1-deploy
spec:
  replicas: 3
  selector:
    matchLabels:
      env: dev
      app: backend1
  template:
    metadata:
      labels:
        env: dev
        app: backend1
    spec:
      containers:
        - name: backend1
          image: localhost:5000/backend1
