Clase05/09-despliegue-local/backend2-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend2-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
      app: backend2
  template:
    metadata:
      labels:
        env: dev
        app: backend2
    spec:
      containers:
        - name: backend2
          image: localhost:5000/backend2
