Clase05/09-despliegue-local/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
spec:
  replicas: 2
  selector:
    matchLabels:
      env: dev
      app: frontend
  template:
    metadata:
      labels:
        env: dev
        app: frontend
    spec:
      containers:
        - name: frontend
          image: localhost:5000/frontend
