Clase05/09-despliegue-local/backend1-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend1-svc
spec:
  type: ClusterIP
  selector:
    env: dev
    app: backend1
  ports:
    - port: 80
      targetPort: 3010
      protocol: TCP
