Clase05/09-despliegue-local/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-app
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: "nginx"
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/config
            pathType: Prefix
            backend:
              service:
                name: "frontend-svc"
                port:
                  number: 80
          - path: /api/product
            pathType: Prefix
            backend:
              service:
                name: "backend1-svc"
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: "frontend-svc"
                port:
                  number: 80
